# calculation-of-energy-levels

./: .gitignore  Maxima_10_ODE_rp4_BR.wxm  README.md  Zadanie_1_basen.wxmx  Zaliczenie.wxmx  engines.py  pyproject.toml  zadanie_0.wxmx  zadanie_1_basen_2.wxmx  zadanie_2_basen_2.wxmx  zadanie_2_pole_powierzchni.wxmx  zadanie_3_łódka.wxmx  zadanie_5_Pływak.wxmx  zadanie_6_promieniotworczosc_1.wxmx  zadanie_6_promieniotworczosc_2.wxmx  zadanie_7_wzór_różnicowy.wxmx
Project/: function.py
R/: projekt1.Rmd  projekt2.Rmd  wyniki.txt  zad4.Rmd  zad5.Rmd  zad6.Rmd
nowoczesnemetodyprogramowania/: engines.py
nowoczesnemetodyprogramowania/Project/: main.py
project/: __init__.py  main.py  wynik.txt
python/: zadanie1.py
python/projekt/: function.py  main.py  struktura.txt  wynik.txt
tests/: test_engine.py  test_nowoczesnemetodyprogramowania.py
