[tool.poetry]
name = "TPD"
version = "0.1.0"
description = ""
authors = ["gunater <mat.ostrowski96@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
numpy = "^1.20.1"
scipy = "^1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
